assets/css/style.css
  @import url('https://fonts.googleapis.com/css2?family=Alegreya+Sans+SC:wght@800;900&family=Hind+Madurai:wght@300;400;500;600;700&family=Raleway:ital,wght@0,700;0,800;1,700;1,800&display=swap');

  body {
    font-family: 'Hind Madurai', sans-serif;
    margin: 0;
  }

  h1, h2, h3 {
    font-family: 'Alegreya Sans SC', sans-serif;
  }

  h4 {
    font-family: 'Raleway', sans-serif;
  }

/*navbar*/

  .navbar-brand {
    font-family: 'Alegreya Sans SC', sans-serif;
  }

  .navbar {
    background-color: #F1FAEE;
  }

  /*hero carousel*/

  .carousel h2 {
    text-transform: uppercase;
    letter-spacing: 5px;
    color: #FF715B;
    font-size: 0.9rem;
    width: 50%;
    position: absolute;
    z-index: 3;
    margin-top: 1rem;
    margin-left: 1rem;
    background-color: rgba(29, 53, 124, 0.7);
  }

  /*#cover-text, #cover-text h2 {
    color: #FF715B;
    font-size: 14px;
  }
  
  #cover-text {
    font-family: 'Alegreya Sans SC', sans-serif;
    text-transform: uppercase;
    letter-spacing: 5px;
  
    width: 180px;
    height: 100px;
  
    padding-top: 10px;
    padding-left: 10px;
  
    background-color: rgba(29, 53, 124, 0.7);
  
    bottom: 240px;
    left: 11px;
  
    position: relative;
  }*/
  
   /*company summary*/

  #company-summary {
    height: 600px;
    text-align: center;
    padding-top: 0px;
    
  }

  #company-summary-heading {
    letter-spacing: 5px;
    padding-top: 50px;
    padding-bottom: 50px;
    background-color: #FF715B;
  }

  #company-summary h2,h3 {
    text-transform: uppercase;
    letter-spacing: 5px;
  }

  #company-summary hr {
    border: 5px dashed #1ea896;
    width: 70%;
    margin: 15px 15%;
  }

  #left-about {
    padding: 0px;
    height: 100%;
    width: 50%;
    float: left;
    height: min-content;
  }

  #left-about-heading {
    width: 100%;
    line-height: 30px;
    background-color: #F1FAEE;
    padding: 20px;
  }

  #left-about-heading h4 {
    padding: 10px;
  }

  #right-about {
    width: 50%;
    float: right;
    background-color: #1ea896;
  }

  #right-about-img img {
    width: 100%;
  }

  /*review section homepage*/

  #reviews {
    height: 600px;
    background-color: #FF715B;
  }

  /*contact form*/

  #contact-form {
    height: 600px;
    background-color: #1ea896;
  }

  /*footer*/
  
  footer {
    height: 150px;
    background-color: #F1FAEE;
    }
   
   .footer-about {
      font-size: 150%;
      font-family: 'Alegreya Sans SC', sans-serif;
      text-align: left;
      margin: auto;
      padding: 5%;
      color: #000;
    }
  
    .social-networks {
      text-align: right;
    }
    
    .social-networks li {
      display: inline;
    }
    .social-networks i {
      font-size: 150%;
      margin: 30px auto;
      padding: 5%;
      color: #FF715B;
    }

  /*media queries*/

  @media screen and (max-width: 1396px){

  .carousel #company-summary {
    width: 65%;
    height: 1200px;
    margin: 0 auto;
  }

  #company-summary-heading {
    padding: 10px;
    margin-top: 0;
}

  #left-about, #right-about, #right-about-img {
    width: 100%;
    clear: both;
    float: left;
    padding: 0;
  }
  
hr {
  display: none;
}


 

